# ade20k-explore

./: .gitignore  LICENSE  README.md  explore.ipynb  parse_classes.py  pyproject.toml
